; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/firewire/extr_net.c_fwnet_header_cache.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/firewire/extr_net.c_fwnet_header_cache.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.neighbour = type { i32, %struct.net_device* }
%struct.net_device = type { i32 }
%struct.hh_cache = type { i64, i32, i64 }
%struct.fwnet_header = type { i64, i32 }

@ETH_P_802_3 = common dso_local global i32 0, align 4
@FWNET_HLEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.neighbour*, %struct.hh_cache*)* @fwnet_header_cache to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fwnet_header_cache(%struct.neighbour* %0, %struct.hh_cache* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.neighbour*, align 8
  %5 = alloca %struct.hh_cache*, align 8
  %6 = alloca %struct.net_device*, align 8
  %7 = alloca %struct.fwnet_header*, align 8
  store %struct.neighbour* %0, %struct.neighbour** %4, align 8
  store %struct.hh_cache* %1, %struct.hh_cache** %5, align 8
  %8 = load %struct.hh_cache*, %struct.hh_cache** %5, align 8
  %9 = getelementptr inbounds %struct.hh_cache, %struct.hh_cache* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i32, i32* @ETH_P_802_3, align 4
  %12 = call i64 @cpu_to_be16(i32 %11)
  %13 = icmp eq i64 %10, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %44

15:                                               ; preds = %2
  %16 = load %struct.neighbour*, %struct.neighbour** %4, align 8
  %17 = getelementptr inbounds %struct.neighbour, %struct.neighbour* %16, i32 0, i32 1
  %18 = load %struct.net_device*, %struct.net_device** %17, align 8
  store %struct.net_device* %18, %struct.net_device** %6, align 8
  %19 = load %struct.hh_cache*, %struct.hh_cache** %5, align 8
  %20 = getelementptr inbounds %struct.hh_cache, %struct.hh_cache* %19, i32 0, i32 2
  %21 = load i64, i64* %20, align 8
  %22 = inttoptr i64 %21 to i32*
  %23 = getelementptr inbounds i32, i32* %22, i64 16
  %24 = getelementptr inbounds i32, i32* %23, i64 -16
  %25 = bitcast i32* %24 to %struct.fwnet_header*
  store %struct.fwnet_header* %25, %struct.fwnet_header** %7, align 8
  %26 = load %struct.hh_cache*, %struct.hh_cache** %5, align 8
  %27 = getelementptr inbounds %struct.hh_cache, %struct.hh_cache* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = load %struct.fwnet_header*, %struct.fwnet_header** %7, align 8
  %30 = getelementptr inbounds %struct.fwnet_header, %struct.fwnet_header* %29, i32 0, i32 0
  store i64 %28, i64* %30, align 8
  %31 = load %struct.fwnet_header*, %struct.fwnet_header** %7, align 8
  %32 = getelementptr inbounds %struct.fwnet_header, %struct.fwnet_header* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 8
  %34 = load %struct.neighbour*, %struct.neighbour** %4, align 8
  %35 = getelementptr inbounds %struct.neighbour, %struct.neighbour* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 8
  %37 = load %struct.net_device*, %struct.net_device** %6, align 8
  %38 = getelementptr inbounds %struct.net_device, %struct.net_device* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = call i32 @memcpy(i32 %33, i32 %36, i32 %39)
  %41 = load i32, i32* @FWNET_HLEN, align 4
  %42 = load %struct.hh_cache*, %struct.hh_cache** %5, align 8
  %43 = getelementptr inbounds %struct.hh_cache, %struct.hh_cache* %42, i32 0, i32 1
  store i32 %41, i32* %43, align 8
  store i32 0, i32* %3, align 4
  br label %44

44:                                               ; preds = %15, %14
  %45 = load i32, i32* %3, align 4
  ret i32 %45
}

declare dso_local i64 @cpu_to_be16(i32) #1

declare dso_local i32 @memcpy(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
